--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ const links = [
 
 <nav class="navbar">
   <div class="container navbar-content">
-    <a href="#home" class="logo">Laura Llorente</a>
+    <a href="#home" class="logo">Laura's Portfolio</a>
     <ul class="nav-links">
       {
         links.map((link) => (
